src/assets/base.css
/* color definitions */
:root {
  --white: #ffffff;
  --white-soft: #f8f8f8;
  --white-mute: #f2f2f2;

  --black: #181818;
  --black-soft: #222222;
  --black-mute: #282828;

  --accent-1: #FF66C4;
  --accent-2: #FFDE59;
  --accent-3: #5CE1E6;
  --accent-4: #8952FF;

  --accent-1-disabled: hsl(323, 100%, 10%, 50%);

  --dark-1: #211E52;
  --dark-2: #2D2872;

  --light: #C6C5CD;
}

/* semantic color variables for this project */
:root {
  --color-background: var(--white);
  --color-background-soft: var(--white-soft);
  --color-background-mute: var(--white-mute);
  --color-background-alt: var(--dark-1);

  --color-text: var(--black);
  --color-text-soft: var(--black-soft);
  --color-text-mute: var(--black-mute);
  --color-text-alt: var(--white-soft);
  
  --section-gap: 60px;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-background: var(--black);
    --color-background-soft: var(--black-soft);
    --color-background-mute: var(--black-mute);
    --color-background-alt: var(--light);

    --color-text: var(--white);
    --color-text-soft: var(--white-soft);
    --color-text-mute: var(--white-mute);
    --color-text-alt: var(--dark-1);
  }
}

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  position: relative;
  font-weight: normal;
}

body {
  min-height: 100vh;
  line-height: 1.6;
  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  font-size: 15px;
  background-color: var(--color-background);
  color: var(--color-text);
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

